new features: - link transactions with incoming credit notes - improve usability for link modal - add removal possibility of transaction balances

--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -178,7 +178,7 @@
 			{% endif %}
 		</div>
 
-		{% if document.classname == 'Document_Incoming_Invoice' %}
+		{% if document.classname == 'Document_Incoming_Invoice' or document.classname == 'Document_Incoming_Creditnote' %}
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="panel panel-default">
