--- a/app/admin/template/financial/account/transaction/modal.incoming_invoice.twig
+++ b/app/admin/template/financial/account/transaction/modal.incoming_invoice.twig
@@ -24,8 +24,9 @@
 <hr />
 
 
-<form action="{{ env.module.get_module_path() }}?action=edit&id={{ transaction.id }}" method="post" class="form-horizontal form-condensed" id="search_incoming_invoices">
+
 <h5>2. {% trans "Search invoices" %}</h5>
+	<form action="{{ env.module.get_module_path() }}?action=edit&id={{ transaction.id }}" method="post" class="form-horizontal form-condensed" id="search_incoming_invoices">
 	<div class="form-group">
 		<label class="col-xs-3 control-label">{% trans "Search invoice" %}</label>
 		<div class="col-xs-6">
@@ -37,11 +38,11 @@
 			</div>
 		</div>
 	</div>
+	</form>
 
 	<div class="incoming_invoice_search_results"></div>
-
 <hr />
-</form>
+
 
 <form action="{{ env.module.get_module_path() }}?action=link_incoming_invoice" method="post" class="form-horizontal form-condensed" id="link_incoming_invoice">
 <h5>3. {% trans "Confirm link" %}</h5>
@@ -64,6 +65,7 @@
 			<div class="input-group">
 				<span class="input-group-addon">&euro;</span>
 				<input type="text" class="form-control" id="link_incoming_invoice_amount" style="width: 143px;" name="link_incoming_invoice_amount" value="">
+				<span class="input-group-addon" id="max_incoming_invoice_amount"></span>
 			</div>
 		</div>
 	</div>
@@ -100,19 +102,6 @@
 		search_incoming_invoices();
 	});
 
-	$('#link_incoming_invoice').submit(function(event) {
-		invoice_amount = parseFloat($('#link_incoming_invoice_amount').val());
-		supplier_amount = parseFloat($('#link_supplier_amount').val());
-
-		if ({{ transaction.get_balance() }} > (invoice_amount*-1) + (supplier_amount*-1)) {
-			$('#confirm_link_incoming_invoices .alert').removeClass('hide');
-			event.preventDefault();
-			return false;
-		} else {
-			$('#confirm_link_incoming_invoices .alert').addClass('hide');
-			return true;
-		}
-	})
 
 	function search_incoming_invoices() {
 		url = '/financial/account/transaction?action=search_incoming_invoices&transaction_id={{ transaction.id }}&search=' + URI.encode($('#txt_search_incoming_invoices').val());
@@ -134,14 +123,10 @@
 		});
 	}
 
-	function table_incoming_invoices_tr_click(row) {
-		var source = $("#selected-incoming-invoice").html();
-		$('#confirm_link_incoming_invoices').html(source)
-		transaction_amount = {{ transaction.get_balance() }};
-		invoice_amount = row.data('amount');
+	var transaction_amount;
+	var invoice_amount;
 
-		$('#document_id').val(row.data('id'));
-
+	function incoming_invoice_fill_up() {
 		if (transaction_amount >= invoice_amount*-1 && transaction_amount < 0) {
 			$('#confirm_link_incoming_invoices #link_incoming_invoice_amount').val(transaction_amount*-1);
 			$('#confirm_link_incoming_invoices #link_supplier_amount').val(0);
@@ -149,18 +134,50 @@
 			$('#confirm_link_incoming_invoices #link_incoming_invoice_amount').val(invoice_amount);
 			$('#confirm_link_incoming_invoices #link_supplier_amount').val( (Math.round( (invoice_amount+transaction_amount) * 100) / 100) * -1);
 		}
+	}
+
+	function table_incoming_invoices_tr_click(row) {
+		var source = $("#selected-incoming-invoice").html();
+		$('#confirm_link_incoming_invoices').html(source)
+		transaction_amount = {{ transaction.get_balance() }};
+		invoice_amount = row.data('amount');
+
+		$('#confirm_link_incoming_invoices #max_incoming_invoice_amount').html('/ €' + invoice_amount);
+		$('#document_id').val(row.data('id'));
 
 		$('#supplier_amount_0').on('click', function() {
+			$(this).addClass('active');
+			$('#supplier_amount_max').removeClass('active');
+			incoming_invoice_fill_up();
 			$('#confirm_link_incoming_invoices #link_supplier_amount').val(0);
 		})
 
 		$('#supplier_amount_max').on('click', function() {
-			$('#confirm_link_incoming_invoices #link_supplier_amount').val(0);
-			transaction_amount = {{ transaction.get_balance() }};
-			max_amount = (Math.round( (invoice_amount+transaction_amount) * 100) / 100) * -1;
-			$('#confirm_link_incoming_invoices #link_supplier_amount').val(max_amount);
+			incoming_invoice_fill_up();
+			$(this).addClass('active');
+			$('#supplier_amount_0').removeClass('active');
 		})
+
+		$('#supplier_amount_0').click();
 	}
+
+	$('#link_incoming_invoice').submit(function(event) {
+		for_invoice = parseFloat($('#link_incoming_invoice_amount').val());
+		for_supplier = parseFloat($('#link_supplier_amount').val());
+
+		if (transaction_amount > (for_invoice*-1) + (for_supplier*-1)) {
+			$('#confirm_link_incoming_invoices .alert').removeClass('hide');
+			event.preventDefault();
+			return false;
+		} else if (for_invoice > invoice_amount*-1) {
+			$('#confirm_link_outgoing_invoices .alert').removeClass('hide');
+			event.preventDefault();
+			return false;
+		} else {
+			$('#confirm_link_incoming_invoices .alert').addClass('hide');
+			return true;
+		}
+	})
 </script>
 
 {% endblock body %}
