--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -210,6 +210,7 @@
 						<th>{{ pager.create_header('City'|trans, 'city')|raw }}</th>
 						<th>{{ pager.create_header('Country'|trans, 'country.name')|raw }}</th>
 						<th>{{ pager.create_header('Vat'|trans, 'vat')|raw }}</th>
+						<th>{{ pager.create_header('Accounting ID'|trans, 'supplier.accounting_identifier')|raw }}</th>
 						<th>&nbsp;</th>
 					</tr>
 				</thead>
@@ -224,6 +225,7 @@
 					{% if supplier.country_id > 0 %}{{ supplier.country.name }}{% else %}<em>{% trans "Unknown country" %}</em>{% endif %}
 				</td>
 				<td>{{ supplier.get_vat_formatted() }}</td>
+				<td>{{ supplier.accounting_identifier }}</td>
 				<td>
 					<a href="/administrative/supplier/detail?id={{ supplier.id }}" title="">
 						<span class="glyphicon glyphicon-pencil"></span>
