Show invoice number instead of ID

--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -21,7 +21,7 @@
 					<div class="panel-body">
 						<dl class="dl-horizontal">
 							<dt>{% trans "Invoice number" %}</dt>
-							<dd>{{ invoice.id }}</dd>
+							<dd>{{ invoice.number }}</dd>
 
 							<dt>{% trans "Created" %}</dt>
 							<dd>{{ invoice.created|datetime }}</dd>
