--- a/app/admin/template/administrative/incoming.twig
+++ b/app/admin/template/administrative/incoming.twig
@@ -54,7 +54,7 @@
 
 						<div class="panel-footer">
 							<button class="btn btn-success">{% trans "Select" %}</button>
-							<a class="btn btn-danger" href="javascript: remove_page({{ incoming_page.id }}); $('#dataConfirmModal').modal('hide')" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete this page?" %}">{% trans "Remove page" %}</a>
+							<a class="btn btn-danger" href="/administrative/incoming?action=remove_page&id={{ incoming_page.id }}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete this page?" %}">{% trans "Remove page" %}</a>
 						</div>
 					</div>
 				</div>
@@ -108,12 +108,6 @@
 
 				activate_convert_button();
 			});
-
-			function remove_page(id) {
-				$('#page_' + id).remove();
-
-				$.get( "/administrative/incoming?action=remove_page&id=" + id );
-			}
 
 			function activate_convert_button() {
 				count = $('.panel.panel-success').length;
